--- a/affl.html
+++ b/affl.html
@@ -1,4 +1,4 @@
-<script src="https://rawcdn.githack.com/oscarmorrison/md-page/master/md-page.js"></script>
+<script src="https://rawcdn.githack.com/oscarmorrison/md-page/master/md-page.js"></script><noscript>
 ## Affiliation with Bastion
 Win7Devs, under ThunderStorm Entertainment, is a division and team, in/of [Bastion](https://youtube.com/@bastionsg).  
 Team head: Cube ([GitHub](https://github.com/plaincube)), ([YouTube](https://youtube.com/@cubeultm)).
