--- a/affl.html
+++ b/affl.html
@@ -1,8 +1,6 @@
 ---
 layout: default
 ---
-<script src="https://rawcdn.githack.com/oscarmorrison/md-page/master/md-page.js"></script><noscript>
 ## Affiliation with Bastion
 Win7Devs, under ThunderStorm Entertainment, is a division and team, in/of [Bastion](https://youtube.com/@bastionsg).  
-Team head: Cube ([GitHub](https://github.com/plaincube)), ([YouTube](https://youtube.com/@cubeultm)).
-</noscript>
+<p>Team head: Cube (</p><a href="https://youtube.com/@cubeultm">YouTube</a><p>, </p><a href="https://github.com/plaincube">GitHub</a><p>)</p>
