--- a/affl.html
+++ b/affl.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
-## Affiliation with Bastion
+<title>Affiliation with Bastion | Win7DT's Homepage</title>
+<h1>Affiliation with Bastion</h1>
 Win7Devs, under ThunderStorm Entertainment, is a division and team, in/of [Bastion](https://youtube.com/@bastionsg).  
 <p>Team head: Cube (</p><a href="https://youtube.com/@cubeultm">YouTube</a><p>, </p><a href="https://github.com/plaincube">GitHub</a><p>)</p>
