--- a/affl.html
+++ b/affl.html
@@ -3,5 +3,5 @@ layout: default
 ---
 <title>Affiliation with Bastion | Win7DT's Homepage</title>
 <h1>Affiliation with Bastion</h1>
-Win7Devs, under ThunderStorm Entertainment, is a division and team, in/of <a href="https://youtube.com/@bastionsg">Bastion</a>.  
+Win7Devs, under ThunderStorm Entertainment, is a division and team, in/of <a href="https://youtube.com/@bastionsg">Bastion</a>. <br>
 Team head: Cube (<a href="https://youtube.com/@cubeultm">YouTube</a>, <a href="https://github.com/plaincube">GitHub</a>)
