--- a/affl.html
+++ b/affl.html
@@ -1,7 +1,7 @@
 ---
+title: Bastion Affiliation
 layout: default
 ---
-<title>Affiliation with Bastion | Win7DT's Homepage</title>
 <h1>Affiliation with Bastion</h1>
 Win7Devs, under ThunderStorm Entertainment, is a division and team, in/of <a href="https://youtube.com/@bastionsg">Bastion</a>. <br>
 Team head: Cube (<a href="https://youtube.com/@cubeultm">YouTube</a>, <a href="https://github.com/plaincube">GitHub</a>)
