Update and rename affl.html to _posts/affl.html

--- a/_posts/affl.html
+++ b/_posts/affl.html
@@ -1,6 +1,6 @@
 ---
 title: Bastion Affiliation
-layout: default
+layout: post
 ---
 <h1>Affiliation with Bastion</h1>
 Win7Devs, under ThunderStorm Entertainment, is a division and team, in/of <a href="https://youtube.com/@bastionsg">Bastion</a>. <br>
